objects/wktNotificationEmployeeContent__c.object
<CustomObject>
    <description>The employee-related content for the portal&apos;s notification emails.</description>
    <fields>
        <fullName>Documents__c</fullName>
        <description>The document status of the employee.</description>
        <inlineHelpText>The document status of the employee.</inlineHelpText>
        <label>Documents</label>
        <picklist>
            <picklistValues>
                <fullName>Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted to Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EmployeeNameFormula__c</fullName>
        <description>The full name of the employee whose statuses and dates are shown.</description>
        <formula>Employment__r.Employee__r.FullNameFormula__c</formula>
        <inlineHelpText>The full name of the employee whose statuses and dates are shown.</inlineHelpText>
        <label>Employee Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployeeSurvey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The latest survey that this employee took in order to cause the statuses shown.</description>
        <inlineHelpText>The latest survey that this employee took in order to cause the statuses shown.</inlineHelpText>
        <label>Employee Survey</label>
        <referenceTo>EmployeeSurvey__c</referenceTo>
        <relationshipLabel>wkt Notification Employee Content</relationshipLabel>
        <relationshipName>wktNotificationEmployeeContent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EmploymentStartDateFormula__c</fullName>
        <description>The hire date of this employee.</description>
        <formula>Employment__r.StartDate__c</formula>
        <inlineHelpText>The hire date of this employee.</inlineHelpText>
        <label>Employment Start Date Formula</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The employment period for the employee in this line item.</description>
        <inlineHelpText>The employment period for the employee in this line item.</inlineHelpText>
        <label>Employment Period</label>
        <referenceTo>Employment__c</referenceTo>
        <relationshipLabel>wkt Notification Employee Content</relationshipLabel>
        <relationshipName>wktNotificationEmployeeContent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PortalNotification__c</fullName>
        <description>The portal email notification that this employee content is for.</description>
        <inlineHelpText>The portal email notification that this employee content is for.</inlineHelpText>
        <label>Portal Notification</label>
        <referenceTo>PortalNotification__c</referenceTo>
        <relationshipLabel>wkt Notification Employee Content</relationshipLabel>
        <relationshipName>wktNotificationEmployeeContent</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ProgramEmployeeCount__c</fullName>
        <description>The number of employees in this program at all locations under this portal user&apos;s purview.</description>
        <inlineHelpText>The number of employees in this program at all locations under this portal user&apos;s purview.</inlineHelpText>
        <label>ProgramEmployeeCount</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProgramShortNameFormula__c</fullName>
        <description>The short name of the program, for easy consumption.</description>
        <formula>Program__r.ShortName__c</formula>
        <inlineHelpText>The short name of the program, for easy consumption.</inlineHelpText>
        <label>Program Short Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The program that these employee statistics are for.</description>
        <inlineHelpText>The program that these employee statistics are for.</inlineHelpText>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>wkt Notification Employee Content</relationshipLabel>
        <relationshipName>wktNotificationEmployeeContent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Qualified__c</fullName>
        <description>Whether this employee qualified. &quot;N/A&quot; means the person didn&apos;t screen.</description>
        <inlineHelpText>Whether this employee qualified. &quot;N/A&quot; means the person didn&apos;t screen.</inlineHelpText>
        <label>Qualified</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ScreenDateFormula__c</fullName>
        <description>The date and time the survey was taken.</description>
        <formula>EmployeeSurvey__r.SurveyDate__c</formula>
        <inlineHelpText>EmployeeSurvey__r.SurveyDate__c</inlineHelpText>
        <label>Screen Date Formula</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ScreeningStatus__c</fullName>
        <description>The screening status of this employee.</description>
        <inlineHelpText>EmployeeSurvey__r.SurveyDate__c</inlineHelpText>
        <label>Screening Status</label>
        <picklist>
            <picklistValues>
                <fullName>Correct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Hired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transferred In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transferred Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unscreened</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>wkt Notification Employee Content</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>wkt Notification Employee Conent Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>wkt Notification Employee Content</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>